# cpptoml-ng

./: README.md  meson.build
examples/: build_toml.cc  meson.build
include/: cpptoml.h
src/: misc.cc  parser.cc  value.cc  writer.cc
